workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__failure_reason_sits_at_the_top.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │       ┌ New worktree in api · staccato ──────────────────────┐        "
"   no worktrees · n         │       │  no TYPESAFE_API_KEY · choosing manually             │        "
" ▾ web                      │       │                                                      │        "
"   ✔ new-checkout           │       │› Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
