workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__failure_reason_sits_under_the_task.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ◆ rate-limit             │       │  Name    fix-login-redirect                          │        "
"   ○ docs-update            │       │          branch: fix-login-redirect                  │        "
" ▾ web                      │       │                                                      │        "
"   ✔ new-checkout           │       │  Task    Fix the redirect loop on login when the     │        "
" ▾ lisa                     │       │          session cookie has expired                  │        "
"   no worktrees · n         │       │          no TYPESAFE_API_KEY · choosing manually     │        "
"                            │       │                                                      │        "
"                            │       │› Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
