workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__grouped_agents_carry_a_dim_repository_tag.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ B-Metric                 │                                                                       "
"   ◉ fix-ingest-lag     api │                                                                       "
"   ◆ dashboard-filter   web │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ lisa                     │                    n starts a worktree in B-Metric                    "
"   ✔ sidebar-groups         │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" ⏎ fold · n new · e rename · d ungroup · ? keys                                                     "
