workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__help_separates_the_sidebar_keys_from_the_ones_that_work_anywhere.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │       ┌ Keys ────────────────────────────────────────────────┐        "
"▐▾ api                      │       │  ANYWHERE                                            │        "
"   ◉ fix-login              │       │  ^a      switch between the agent and the sidebar    │        "
"   ◆ rate-limit             │       │  ^a ^a   send ctrl-a to the agent                    │        "
"   ○ docs-update            │       │  click   open a row · focus the agent                │        "
" ▾ lisa                     │       │  wheel   move in the sidebar · scroll the agent      │        "
"   no worktrees · n         │       │  ⇧ drag  select text, as your terminal does it       │        "
" ▾ web                      │       │                                                      │        "
"   ✔ new-checkout           │       │  SIDEBAR                                             │        "
"                            │       │  ↑↓ j k  move                                        │        "
"                            │       │  ⏎       open worktree / fold project or group       │        "
"                            │       │  tab     next worktree that needs you                │        "
"                            │       │  n       new worktree in this project or group       │        "
"                            │       │  p       add project or group                        │        "
"                            │       │  e       rename project, group or worktree           │        "
"                            │       │  b       change base branch                          │        "
"                            │       │  d       remove worktree / ungroup                   │        "
"                            │       │  r / s   restart / stop agent                        │        "
"                            │       │  < >     resize the sidebar                          │        "
"                            │       │  q       quit (agents keep running)                  │        "
"                            │       │  Q       stop every agent and quit                   │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                                                                                                    "
