workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__long_task_wraps_without_splitting_characters.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │  Name                                                │        "
" ▾ lisa                     │       │          branch: —                                   │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │› Task    segunda linha: validar também o fluxo de    │        "
"   ✔ new-checkout           │       │          reenvio e a paginação da listagem de        │        "
"                            │       │          pedidos▏                                    │        "
"                            │       │                                                      │        "
"                            │       │  Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
