workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__model_without_effort_hides_the_effort.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │  Name    fix-login-redirect                          │        "
" ▾ lisa                     │       │          branch: fix-login-redirect                  │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  Task    rename foo to bar                           │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │› Agent   ● claude  suggested · 90%                   │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ haiku ›                                   │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
