workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__narrow_terminal_keeps_groups_in_the_glyph_rail.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"   │> fix the login redirect                                                    "
" · │⏺ Updating middleware...                                                    "
"▐◉ │✳ Waiting for input                                                         "
" ◆ │                                                                            "
" · │                                                                            "
" · │                                                                            "
" · │                                                                            "
" ✔ │                                                                            "
"   │                                                                            "
"   │                                                                            "
"   │                                                                            "
" ^a sidebar                                b-metric-api/fix-ingest-lag · claude "
