workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_group_asks_for_a_name.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │       ┌ New group ───────────────────────────────────────────┐        "
"   ✔ new-checkout           │       │  › Name  Glowz▏                                      │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ next · esc cancel                                 │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
