workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_group_fits_the_smallest_terminal.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJE┌ New group ───────────────────────────────────────┐  "
"▐▾ api│  ~/Workspace/             Glowz · 0 marked  1/17 │  "
"   ◉ f│  › ▏                                             │  "
"   ◆ r│                                                  │  "
"   ○ d│  ▐ ● glowz                                       │  "
" ▾ lis│    ● glowz-api                                   │  "
"   no │    ● lisa                                  added │  "
" ▾ web│    ● service-00                                  │  "
"   ✔ n│  mark at least one repository                    │  "
"      │  space mark · → open · ← up · ⏎ create · esc     │  "
"      └──────────────────────────────────────────────────┘  "
"                                                            "
