workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_group_marks_repositories_across_folders.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New group ───────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                       Glowz · 2 marked │        "
" ▾ lisa                     │       │  › ▏                                                 │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │    ✔ glowz                                           │        "
"   ✔ new-checkout           │       │    ● glowz-api                                       │        "
"                            │       │    ● lisa                                      added │        "
"                            │       │  ▐   archive/                                        │        "
"                            │       │      notes/                                          │        "
"                            │       │                                                      │        "
"                            │       │  space mark · → open · ← up · ⏎ create · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
